# cost-optimizer

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/cost_optimizer/: cli.py  optimizer.py
