[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fableforge-cost-optimizer"
version = "0.1.0"
description = "Analyze token waste and optimize LLM routing for cost savings"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "matplotlib>=3.9.0",
]

[project.scripts]
costopt = "cost_optimizer.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
ignore = ["E501"]